Error Mitigation/MagiCoder/Data/javax_xml_stream_util/javax_xml_stream_utilOutputResult.txt
Sample: EventReaderDelegate_3
----------------------------------------------------------------
================================================================

Sample: StreamReaderDelegate_1
----------------------------------------------------------------
stdout:
hasNext: false

================================================================

Sample: StreamReaderDelegate_4
----------------------------------------------------------------
output:
./Data/javax_xml_stream_util/javaFiles/StreamReaderDelegate_4.java:16: error: exception XMLStreamException is never thrown in body of corresponding try statement
                    } catch (XMLStreamException e) {
                      ^
1 error


================================================================

Sample: StreamReaderDelegate_5
----------------------------------------------------------------
stdout:
root

================================================================

Sample: StreamReaderDelegate_6
----------------------------------------------------------------
stdout:
null

================================================================

Sample: StreamReaderDelegate_7
----------------------------------------------------------------
stdout:
null

================================================================

